syntax = "proto3";

option csharp_namespace = "Book.PricingEngine";

package price;

// The greeting service definition.
service Pricer {
  // Sends a greeting
  rpc GetPrice (PriceRequest) returns (PriceReply);
}

// The request message containing the user's name.
message PriceRequest {
  string title = 1;
  string genre = 2;
  string author = 3;
  string publisherName = 4;
  sint32 year = 5;
  string modelCode = 6;
}

// The response message containing the greetings.
message PriceReply {
  sint32 price = 1;
  string currencyCode = 2;
}
